[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/helper/Pathwalker.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/helper/PathwalkerWithDetection.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]

[node name="DetectingPathwalker" instance=ExtResource( 1 )]
script = ExtResource( 2 )
follower = NodePath("")
maskBit = 2

[node name="Area" type="Area" parent="." index="0"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]
shape = SubResource( 1 )

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
